--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#about_sec" class="nav_link"><span>About</span></a></li>
                         <li><a href="#resume_sec" class="nav_link"><span>Resume</span></a></li>
                         <li><a href="#messege_sec" class="nav_link"><span>Message me</span></a></li>
-                        <li><a href="#footer_sec" class="nav_link"><span>Contect me</span></a></li>
+                        <li><a href="#footer_sec" class="nav_link"><span>Contact me</span></a></li>
                     </ul>
                     <div class="hamburger">
                         <div></div>
@@ -130,40 +130,40 @@
                         <ul class="about-info  mt-4 ">
                             <li class="d-flex">
                                 <span>Name:</span>
-                                <span id="sn">&nbsp;&nbsp;Vikrant Chauhan</span>
+                                <span class="sr" id="sn">&nbsp;&nbsp;Vikrant Chauhan</span>
                             </li>
                             <li class="d-flex">
                                 <span>Education:</span>
-                                <span>&nbsp;Bachelor of Technology</span>
+                                <span class="sr">&nbsp;Bachelor of Technology</span>
                             </li>
                             <li class="d-flex">
                                 <span>Domain:</span>
-                                <span>&nbsp;Software Developement</span>
+                                <span class="sr" id="sd">&nbsp;Software Developement</span>
                             </li>
                             <li class="d-flex">
                                 <span>Branch:</span>
-                                <span>&nbsp;Electronics &amp; Communication Engineering </span>
+                                <span class="sr">&nbsp;Electronics &amp; Communication Engineering </span>
                             </li>
                             <li class="d-flex">
                                 <span>Address:</span>
-                                <span>&nbsp;Varanashi,Uttar Pradesh</span>
+                                <span class="sr" id="sa">&nbsp;Varanashi,Uttar Pradesh</span>
                             </li>
                             <li class="d-flex">
                                 <span>Language:</span>
-                                <span id="sl">&nbsp;&nbsp;English and Hindi</span>
+                                <span class="sr" id="sl">&nbsp;&nbsp;English and Hindi</span>
                             </li>
                             <li class="d-flex">
                                 <span>Interest:</span>
-                                <span>&nbsp;Traveling &amp; Photography</span>
+                                <span class="sr" id="si">&nbsp;Traveling &amp; Photography</span>
                             </li>
                             <li class="d-flex">
                                 <span>Other Skills:</span>
-                                <span>&nbsp;Drawing, Creativity, Technical proficiency,</span>
+                                <span class="sr">&nbsp;Drawing, Creativity, Adaptability,Technical proficiency,Communication skills&amp;Time management </span>
                             </li>
-                            <li class="d-flex">
+                            <!-- <li class="d-flex">
                                 <span></span>
-                                <span> Communication skills, Time management &amp; Adaptability </span>
-                            </li>
+                                <span class="sr"> Communication skills, Time management &amp; Adaptability </span>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
