--- a/index.html
+++ b/index.html
@@ -263,10 +263,7 @@
                         </div>
                         <ul>
                             <li><i class="fa-solid fa-envelope"></i><a href="mailto:vikrantchauhan9794.com">E-mail</a></li>
-                            <li><i class="fa-solid fa-location-dot"></i><a iframe src="
-                                    https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2084391.3903172577!2d83.41758445403067!3d26.131241245555564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1716546144585!5m2!1sen!2sin"
-                                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>Address</a></li>
+                            <li><i class="fa-solid fa-location-dot"></i><a href="https://maps.app.goo.gl/pXa6z6tnraSWKVNK9">Address</a></li>
                             <li><i class="fa-solid fa-phone"></i><a href="tel://6386696764">Contact Number </a></li>
                         </ul>
         
