--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                         </div>
                         <ul>
                             <li><i class="fa-solid fa-envelope"></i><a href="mailto:vikrantchauhan9794.com">E-mail</a></li>
-                            <li><i class="fa-solid fa-location-dot"></i><a href="https://maps.app.goo.gl/pXa6z6tnraSWKVNK9">Address</a></li>
-                            <li><i class="fa-solid fa-phone"></i><a href="tel://6386696764">Contact Number </a></li>
+                            <li><i class="fa-solid fa-location-dot"></i><a href="https://maps.app.goo.gl/pXa6z6tnraSWKVNK9">Varanasi, India</a></li>
+                            <li><i class="fa-solid fa-phone"></i><a href="tel://6386696764">6386696764</a></li>
                         </ul>
         
                     </div>
