--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             </li>
                             
                             <li><i class="fa-brands fa-discord"></i><a href="https://discord.com/invite/DPv8dVvB"> Discod</a></li>
-                            
+                            <li><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/vikrant.chauhan.90663894"> Facebook</a></li>
                             <li><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/vi.krant4693/"> Instagram</a></li>
                         </ul>
                     </div>
