--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div id="homebtn">
                             <button class="btn">
                                 <ul>
-                                    <li><a href="img/Vikrant Chauhan _211EC163_B Tech (SW).pdf" download >Download Resume</a></li>
+                                    <li><a href="img/VikrantChauhan_SW_Resume_25.pdf" download >Download Resume</a></li>
                                 </ul>
                             </button>
                             <button class="btn">
