--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="hover-container">
-                            <span><bold> Technical Courses:</bold>DSA, DBMS, OOPs</span>
+                            <span><bold> Technical Courses:</bold>DSA, DBMS, OOP, OS</span>
                             <div class="skill-card">
                                 <span>DSA</span>
                                 <div class="progress">
@@ -299,7 +299,7 @@
                         <div class="resume-wrap ">
                             <span class="subhead">Revenue Analysis – Hospitality Sector</span>
                             <p>Developed a Power BI dashboard for Atliq Grands to analyze a three-month decline in market share and revenue.</p>
-                            <p>Provided insights that identified key trends, contributing to a projected 20\% recovery.</p>
+                            <p>Provided insights that identified key trends, contributing to a projected 20% recovery.</p>
                             <a class="project-link" href="https://nitkeduin-my.sharepoint.com/:u:/g/personal/vikrantchauhan_211ec163_nitk_edu_in/EU68BaHE5xpAiL26ts9uoZEBsnZtvshgpxO0so8zCHlSeg?e=uoZMri">View Project</a>
                             
                         </div>
