update resume and projects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/img/briefcase-solid.svg" />
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/respon_style.css">
@@ -67,12 +68,12 @@
                         <div id="homebtn">
                             <button class="btn">
                                 <ul>
-                                    <li><a href="img/VikrantChauhan_SW_Resume_25.pdf" download>Download Resume</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1uO5jdb-ZGnCZ5ZcJ8fAUrKswoL1EIMfC/view?usp=sharing" download target="_blank">Download Resume</a></li>
                                 </ul>
                             </button>
                             <button class="btn">
                                 <ul>
-                                    <li><a href="https://github.com/vikrant48"> Visit Github</a></li>
+                                    <li><a href="https://github.com/vikrant48" target="_blank"> Visit Github</a></li>
                                 </ul>
                             </button>
                         </div>
@@ -98,7 +99,7 @@
 
                         <div class="hover-container">
                             <span class="skill_info">
-                                <strong>Programming Languages:</strong> C, C++, JavaScript, Python, SQL
+                                <strong>Programming Languages:</strong> C, C++, JavaScript, TypeScript, Python 
                             </span>
                             <div class="skill-card">
                                 <span>C/C++</span>
@@ -113,12 +114,12 @@
 
                                 <span>Python</span>
                                 <div class="progress">
-                                    <div class="progress-bar" style="width: 85%"></div>
+                                    <div class="progress-bar" style="width: 65%"></div>
                                 </div>
 
-                                <span>SQL</span>
+                                <span>TypeScript</span>
                                 <div class="progress">
-                                    <div class="progress-bar" style="width: 93%"></div>
+                                    <div class="progress-bar" style="width: 83%"></div>
                                 </div>
                             </div>
                         </div>
@@ -137,33 +138,41 @@
                                     <div class="progress-bar" style="width: 85%"></div>
                                 </div>
 
-                                <span>OOPs</span>
+                                <span>OOP</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 93%"></div>
+                                </div>
+                                <span>OS</span>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 83%"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="hover-container">
                             <span class="skill_info">
-                                <strong>Web Technologies:</strong> HTML, CSS, React.js, Node.js, APIs, Tailwind
+                                <strong>Web Technologies:</strong> HTML5, CSS3, React.js, Node.js, Express.js, RESTful APIs, 
                             </span>
                             <div class="skill-card">
-                                <span>HTML</span>
+                                <span>HTML5</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 98%"></div>
                                 </div>
 
-                                <span>CSS/Tailwind</span>
+                                <span>CSS3/Tailwind</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 85%"></div>
                                 </div>
 
                                 <span>React.Js</span>
                                 <div class="progress">
-                                    <div class="progress-bar" style="width: 70%"></div>
+                                    <div class="progress-bar" style="width: 95%"></div>
                                 </div>
 
                                 <span>Node.Js</span>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 90%"></div>
+                                </div>
+                                <span>Express.Js</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 60%"></div>
                                 </div>
@@ -187,7 +196,7 @@
                         </div>
                         <div class="hover-container">
                             <span class="skill_info">
-                                <strong>Databases:</strong> SQL, MySQL
+                                <strong>Databases:</strong> SQL, MySQL, MongoDB
                             </span>
                             <div class="skill-card">
                                 <span>SQL</span>
@@ -196,6 +205,11 @@
                                 </div>
 
                                 <span>MySQL</span>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 85%"></div>
+                                </div>
+
+                                <span>MongoDB</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 85%"></div>
                                 </div>
@@ -253,8 +267,8 @@
                     </div>
                     <div id="rescontent">
                         <p>I'm a passionate software developer with expertise in C, C++, and a solid
-                            foundation in Data Structures and Algorithms. My skills span both front-end (HTML, CSS,
-                            JavaScript, React) and back-end (DBMS, Node.Js) development, enabling me to build
+                            foundation in Data Structures and Algorithms. My skills span both front-end (HTML5, CSS3,
+                            JavaScript, React) and back-end (Node.Js, Express.js, MongoDB, MySQL, Postman) development, enabling me to build
                             comprehensive
                             and efficient web applications. I thrive on problem-solving and continuously learning
                             new technologies to enhance my craft. I'm eager to contribute to innovative and
@@ -271,32 +285,44 @@
                 </div>
                 <div class="row">
                     <div class="col_6">
-                        <div class="resume-wrap ">
-                            <span class="subhead">2021-Present</span>
-                            <h3>NATIONAL INSTITUTE OF TECHNOLOGY KARNATAKA ,SURATHKAL</h3>
-                            <span class="descrip">Bachelor of technology (Electronics and Communication
-                                Engineering)</span>
-                            <p class="subdes">CGPA : 6.80</p>
-
+                        <div class="resume-wrap">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <div>
+                                    <span class="subhead">2021-Present</span>
+                                    <h3>NATIONAL INSTITUTE OF TECHNOLOGY KARNATAKA, SURATHKAL</h3>
+                                    <span class="descrip">Bachelor of Technology (Electronics and Communication Engineering)</span>
+                                    <p class="subdes">CGPA: 6.80</p>
+                                </div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSt6E9j1alP1WPbeYjvtB2H3E_SPONx5DpYyGiXzsWyXdzLkJRAnceMgGdJaebN0iZmRcA&usqp=CAU" alt="NITK Logo" style="height: 80px; width: 80px; object-fit: contain;">
+                            </div>
                         </div>
                     </div>
 
                     <div class="col_6">
-                        <div class="resume-wrap ">
-                            <span class="subhead">2018-2020</span>
-                            <h3>JAWAHAR NAVODAYA VIDYALAYA, BENGALURU URBAN KARNATAKA</h3>
-                            <span class="descrip">INTERMEDIATE</span>
-                            <p class="subdes">Percentage : 89.2</p>
-
+                        <div class="resume-wrap">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <div>
+                                    <span class="subhead">2018-2020</span>
+                                    <h3>JAWAHAR NAVODAYA VIDYALAYA, BENGALURU URBAN KARNATAKA</h3>
+                                    <span class="descrip">INTERMEDIATE</span>
+                                    <p class="subdes">Percentage: 89.2</p>
+                                </div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s" alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
+                            </div>
                         </div>
                     </div>
-
+                
                     <div class="col_6">
-                        <div class="resume-wrap ">
-                            <span class="subhead">2013-2018</span>
-                            <h3>JAWAHAR NAVODAYA VIDYALAYA,MAU UTTAR PRADESH</h3>
-                            <span class="descrip">HIGH SCHOOL</span>
-                            <p class="subdes">Percentage : 90.8</p>
+                        <div class="resume-wrap">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <div>
+                                    <span class="subhead">2013-2018</span>
+                                    <h3>JAWAHAR NAVODAYA VIDYALAYA, MAU UTTAR PRADESH</h3>
+                                    <span class="descrip">HIGH SCHOOL</span>
+                                    <p class="subdes">Percentage: 90.8</p>
+                                </div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s" alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
+                            </div>
                         </div>
                     </div>
 
@@ -310,14 +336,26 @@
                 <div class="row">
                     <div class="col_6">
                         <div class="resume-wrap ">
+                            <span class="subhead">VIDEOMELA</span>
+                            <p> Developed a high-performance video-sharing platform, scalable for 1000+ daily users, leveraging Redux Toolkit for
+                                optimized state management and faster rendering.</p>
+                            <p> Architected a secure backend with JWT-based authentication, bcrypt encryption, and MongoDB, ensuring
+                                seamless user data protection and fast query execution.</p>
+                            <p> Integrated Cloudinary, reducing media upload latency by 30% and ensuring smooth video streaming under heavy
+                                traffic.</p>
+                            <a class="project-link"
+                                href="https://github.com/vikrant48/Video_Mela_frontend">View Project</a>
+                        </div>
+                    </div>
+
+                    <div class="col_6">
+                        <div class="resume-wrap ">
                             <span class="subhead">NEWSMELA</span>
-                            <p> Created a responsive website aggregating real-time news with category filters, weather
-                                updates, and a currency converter
-                                for enhanced usability.</p>
-                            <p>Implemented dark mode, mobile responsiveness, and seamless navigation for optimal
-                                accessibility and experience.</p>
-                            <p>Leveraged APIs and optimized algorithms to handle high traffic, delivering fast and
-                                reliable performance across devices.</p>
+                            <p> Built a dynamic news aggregation platform with real-time updates, allowing users to filter news by categories, check
+                                live weather updates, and use a currency converter, all powered by multiple APIs.</p>
+                            <p> Optimized frontend performance by implementing efficient state management, lazy loading, and API caching, improving
+                                data fetching speed by 40%.</p>
+                            <p> Enhanced user experience by adding dark mode, mobile-first design, and seamless responsiveness across all devices.</p>
                             <a class="project-link" href="https://github.com/vikrant48/NewsMela">View Project</a>
 
                         </div>
@@ -352,19 +390,6 @@
                         </div>
                     </div>
 
-                    <div class="col_6">
-                        <div class="resume-wrap ">
-                            <span class="subhead">Vehicle Stoppage Identification</span>
-                            <p>Created a web application using React and Material-UI to identify and visualize vehicle
-                                stoppages on a map.</p>
-                            <p>Utilized Axios for fetching GPS data from a provided URL and implemented CSV parsing to
-                                process the data.</p>
-                            <p>Designed a stoppage detection algorithm that calculates stoppage points based on speed
-                                and time thresholds, visualizing these on a Leaflet map.</p>
-                            <a class="project-link"
-                                href="https://github.com/vikrant48/Vehical__stoppage_identification">View Project</a>
-                        </div>
-                    </div>
                 </div>
                 <div class="row">
                     <div class="_tital">
